# searchmind

./: .dockerignore  .env.example  .gitignore  CHANGES_SUMMARY.txt  DOCKER.md  DOCS_INDEX.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  QUICKSTART_DOCKER.md  README.md  TESTING_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: chat.py  resources.py  search.py  upload.py
backend/app/core/: chunker.py  document_processor.py  embedder.py  reranker.py  vector_store.py
backend/app/models/: schemas.py
backend/app/services/: chat_service.py  resource_service.py  search_service.py  upload_service.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/ChatPage/: ChatInput.tsx  ChatPage.css  ChatPage.tsx  MessageList.tsx
frontend/src/components/KnowledgeBase/: FileDetails.tsx  KnowledgeBase.css  KnowledgeBase.tsx
frontend/src/components/SearchPage/: ResultList.tsx  SearchBar.tsx  SearchPage.tsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
frontend/src/components/UploadPage/: UploadPage.tsx
frontend/src/hooks/: useChat.ts  useSearch.ts  useUpload.ts
frontend/src/services/: api.ts
