[project]
name = "searchmind-backend"
version = "1.0.0"
description = "SearchMind Backend — hujjatlar bo‘yicha aqlli qidiruv tizimi. FastAPI asosida, PDF/DOCX hujjatlarni yuklash va qayta ishlash, OCR, semantik qidiruv, embedding va re-ranking imkoniyatlari bilan."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "fastapi-mcp",
    # Document Processing
    "PyPDF2",
    "pdfplumber",
    "python-docx",
    "pdf2image",
    "paddleocr",
    "paddlepaddle",
    # Vector Search & Embeddings
    "faiss-cpu",
    "sentence-transformers",
    "transformers",
    # Text Processing
    "langchain-text-splitters",
    # LLM & Chat
    "langchain-ollama",
    "langchain-core",
    # Utilities
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "aiofiles",
    "pillow",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]